--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
-        node-version: '12'
+        node-version: 12.16.3
 
     - name: npm ci
       run: npm ci
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
-        node-version: '12'
+        node-version: 12.16.3
         
     - name: npm ci
       run: npm ci
@@ -39,7 +39,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
-        node-version: '12'
+        node-version: 12.16.3
         
     - name: npm ci
       run: npm ci
