--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -59,7 +59,7 @@ jobs:
       run: pip install nodejsscan==3.7
 
     - name: nodejsscan
-      run: nodejsscan -f server.js -o report.json && grep -q "\[\]" report.json && echo "Nothing found" || cat report.json && exit 1
+      run: nodejsscan -f server.js -o report.json && grep -q "\[\]" report.json && echo "Nothing found" || { cat report.json; exit 1; }
 
     - name: show report
       if:  ${{ success() || failure() }}
