--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   outdated:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
@@ -20,7 +20,7 @@ jobs:
       run: npm outdated
 
   lint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
@@ -34,7 +34,7 @@ jobs:
       run: npx postcss styles.css -c .
 
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
@@ -48,7 +48,7 @@ jobs:
       run: npm test
 
   security:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -73,7 +73,7 @@ jobs:
         path: report.json
 
   docker:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
